View schedule report